<package format="3">
  <name>roboprinter_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for roboprinter_description</p>
    <p>This package contains configuration data, 3D models and launch files
for roboprinter_description robot</p>
  </description>

  <author>ergoash</author>
  <maintainer email="ergoash@outlook.com">ergoash</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
